# openpaper

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  TEST.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude-plugin/: plugin.json
scripts/: compare_runs.py  run_test.sh  test_flow.py
skills/improve/: SKILL.md
skills/openpaper/: SKILL.md
skills/openpaper/fetchers/: markets.py  weather.py
skills/openpaper/fetchers/news/: bbc.py  hackernews.py
skills/openpaper/references/: config.example.yaml  curation-guide.md  edition-schema.md  fetcher-guide.md  local-engine.md
skills/openpaper/scripts/: bench.py  curate.py  curation_core.py  fetch_all.py  fetcher_base.py  make_paper.py  pool.py  rank.py  render.py  serve.py
skills/openpaper/templates/: broadsheet.html.j2
skills/openpaper/templates/assets/: magic.css  magic.js
skills/reflect/: SKILL.md
tests/: test_curate.py  test_rank.py
