[project]
name = "openpaper"
version = "0.9.0"
description = "A pipeline for agents to parse any news source and deliver a curated newspaper-style digest"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "httpx>=0.27",
    "feedparser>=6.0",
    "playwright>=1.40",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
